--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     ],
     "require": {
         "php": "^7.2",
+        "ext-simplexml": "*",
+        "ext-json": "*",
         "geocoder-php/common-http": "^4.0",
         "willdurand/geocoder": "^4.0"
     },
